# prompt-manager

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
.seeds/: config.yaml
prompt_manager/: __init__.py  canary.py  cli.py  client.py  config.py  schema.py  storage.py
tests/: test_cli.py  test_cli_full.py  test_client.py  test_features.py  test_schema.py  test_schema_full.py  test_storage.py  test_storage_full.py
